--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ button {
   background: #007bff;
   color: white;
   transition: 0.2s;
+  font-weight: 600;
+  font-size: 14px;
 }
 
 button:hover { background: #0056b3; }
@@ -76,12 +78,12 @@ button.disabled {
 }
 
 /* Option styling */
-#options div {
+#options div  {
   display: flex;
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 10px;
-  padding: 10px 14px;
+  /* padding: 10px 14px; */
   margin: 10px 0;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -94,12 +96,13 @@ button.disabled {
 }
 
 #options input {
-  margin-right: 12px;
-  transform: scale(1.2);
+  margin: auto 20px;
+  transform: scale(1.5);
   cursor: pointer;
 }
 
 #options label {
+  padding: 20px 0;
   cursor: pointer;
   flex: 1;
   font-size: 16px;
@@ -123,16 +126,21 @@ button.disabled {
   margin: 10px;
 } 
 
+#header {
+  display: grid;
+  grid-template-columns: auto 40px;
+  align-content: center;
+  align-items: center
+}
+
 #changeUserBtn {
-  position: absolute;
-  top: 15px;
-  right: 20px;
+  display: block;
+  height: 40px;
   background: #ff9800;
-  border: none;
   border-radius: 8px;
-  padding: 6px 12px;
+  padding: 6px;
   color: white;
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -140,3 +148,21 @@ button.disabled {
   background: #e68900;
 }
 
+#feedback {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px 0;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  background-color: #fafafa;
+}
+
+#buttonBlock {
+  margin: 20px 0;
+}
+
+#buttonBlock button {
+  min-width: 100px;
+  padding: 10px;
+}
