--- a/style.css
+++ b/style.css
@@ -95,14 +95,13 @@ button.disabled {
   border-color: #66a3ff;
 }
 
-#options input {
-  margin: auto 20px;
-  transform: scale(1.5);
+#options input[type="radio"], #options input[type="checkbox"]{
   cursor: pointer;
+  transform: scale(1.2);
 }
 
 #options label {
-  padding: 20px 0;
+  padding: 20px;
   cursor: pointer;
   flex: 1;
   font-size: 16px;
