--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  max-width: 800px;
+  width: 800px;
   margin: 30px auto;
   padding: 20px;
   padding-bottom: 100px;
@@ -94,7 +94,7 @@ body {
 /* Input style for text questions */
 
 #inputAnswer {
-  width: 100%;
+  /* width: 100%; */
   padding: 8px 10px;
   border-radius: 6px;
   border: 1px solid #ccc;
@@ -230,7 +230,6 @@ button.disabled {
 /* ========== Tablets (landscape + portrait) ========== */
 @media (max-width: 1024px) {
   .container {
-    max-width: 90%;
     margin: 20px auto;
     padding: 18px;
   }
