--- a/style.css
+++ b/style.css
@@ -20,9 +20,16 @@ body {
 
 .hidden { display: none; }
 
-.sections, .timedModes {
+.sections {
   display: grid;
   grid-template-columns: auto auto auto auto;
+  gap: 8px;
+  margin-bottom: 20px;
+}
+
+.timedModes {
+  display: flex;
+  justify-content: center;
   gap: 8px;
   margin-bottom: 20px;
 }
@@ -143,6 +150,12 @@ body {
   line-height: 1.3em;
 }
 
+#results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Buttons */
 
 button {
@@ -208,6 +221,10 @@ button.disabled {
 
 #changeUserBtn:hover {
   border: 1px solid white ;
+}
+
+#modeSelection {
+  text-align: center;
 }
 
 #modeSelection button {
