--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   width: 800px;
   margin: 30px auto;
   padding: 20px;
-  background: #fff;
+  background: #f5f5f5;
   border-radius: 14px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   transition: all 0.2s ease;
@@ -35,15 +35,6 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-}
-
-#navbar {
-  display: grid;
-  grid-template-columns: 135px auto 40px;
-  align-content: center;
-  align-items: center;
-  background-color: #5c4ee5;
-  padding: 20px;
 }
 
 #quizHeader {
@@ -169,7 +160,7 @@ button {
   padding: 8px 16px;
   border: none;
   border-radius: 8px;
-  background: #007bff;
+  background: #1f86f5;
   color: white;
   transition: 0.2s;
   font-weight: 600;
@@ -203,30 +194,8 @@ button.disabled {
 }
 #submitBtn:hover { background-color: #218838; }
 
-#nextBtn, #backToMenu {
-  background-color: #5c4ee5;
-  color: white;
-}
-#nextBtn:hover, #backToMenu:hover { background-color: #7925E8; }
-
-
 #backToMenu {
   margin: 20px 0;
-}
-
-#changeUserBtn {
-  display: block;
-  height: 40px;
-  background-color: transparent;
-  border-radius: 8px;
-  padding: 6px;
-  color: white;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-#changeUserBtn:hover {
-  border: 1px solid white ;
 }
 
 #modeSelection {
